Fix for footer overlap on buttons

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -771,6 +771,7 @@ tbody.active td,
 
 .main-view{
   padding-top: 58px;
+  padding-bottom: 100px;
   input.form-control{
     border: none;
     background: $light-grey-two;
